BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Sample_Adjustment_Request_BMS_SHARED__c.object
<CustomObject>
    <fields>
        <fullName>Address_BMS_SHARED__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address_vod__c.Account_vod__c</field>
                <operation>equals</operation>
                <valueField>$Source.Correct_Prescriber_BMS_SHARED__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Sample Adjustment Requests</relationshipLabel>
        <relationshipName>Sample_Adjustment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjusted_Date_BMS_SHARED__c</fullName>
        <formula>IF(AND(RecordType.Name=&quot;Sample Disbursement&quot;,OR(TEXT( Reason_BMS_SHARED__c)=&quot;Incorrect Quantity Recorded&quot;,TEXT( Reason_BMS_SHARED__c)=&quot;Incorrect Sample/Lot Number Recorded&quot;)), DATEVALUE(Sample_Transaction_BMS_SHARED__r.Signature_Date_vod__c),IF(AND(RecordType.Name=&quot;Sample Disbursement&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Transaction Recorded&quot;), DATEVALUE(Duplicate_Sample_Transaction_BMS_SHARED__r.Signature_Date_vod__c), 

IF(OR(TEXT(Reason_BMS_SHARED__c)= &quot;Disbursement Not Recorded&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Product Received - Not Ordered&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Product Received - Unable to Acknowledge&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Initial Report&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Transfer Received - Unable to Acknowledge&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Hardware/Software Failure&quot;), Date_BMS_SHARED__c ,IF(OR(TEXT(Reason_BMS_SHARED__c)= &quot;Duplicate Transaction Recorded&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Shipment Acknowledged&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Transfer Acknowledged&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Transfer Out Recorded&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Return Recorded&quot;), DATEVALUE(Duplicate_Sample_Transaction_BMS_SHARED__r.CreatedDate),DATEVALUE(Sample_Transaction_BMS_SHARED__r.CreatedDate)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjusted_Date_Secondary_BMS_SHARED__c</fullName>
        <formula>IF(OR(TEXT(Reason_BMS_SHARED__c)= &quot;Incorrect Sample/Lot Number Acknowledged&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Incorrect Sample/Lot Number Recorded&quot;), Sample_Transaction_Date_BMS_Shared__c, Blank_Date_BMS_SHARED__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary: Adjusted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjusted_Lot_BMS_Shared__c</fullName>
        <formula>IF(OR(TEXT(Reason_BMS_SHARED__c)= &quot;Disbursement Not Recorded&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Product Received - Not Ordered&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Product Received - Unable to Acknowledge&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Initial Report&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Transfer Received - Unable to Acknowledge&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Hardware/Software Failure&quot;), Lot_BMS_SHARED__r.Name  ,IF(OR(TEXT(Reason_BMS_SHARED__c)= &quot;Duplicate Transaction Recorded&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Shipment Acknowledged&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Transfer Acknowledged&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Transfer Out Recorded&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Return Recorded&quot;), Duplicate_Sample_Lot_BMS_SHARED__c, Sample_Transaction_Lot_BMS_SHARED__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Lot #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjusted_Lot_Secondary_BMS_SHARED__c</fullName>
        <formula>IF(OR(TEXT(Reason_BMS_SHARED__c)= &quot;Incorrect Sample/Lot Number Acknowledged&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Incorrect Sample/Lot Number Recorded&quot;), Lot_BMS_SHARED__r.Name ,&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary: Adjusted Lot#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjusted_Quantity_BMS_SHARED__c</fullName>
        <formula>IF(TEXT(Reason_BMS_SHARED__c)= &quot;Incorrect Prescriber Profile &amp; Duplicate Disbursement Recorded on Correct Profile&quot;,- Sample_Transaction_BMS_SHARED__r.Inventory_Impact_Quantity_vod__c ,IF(OR(TEXT(Reason_BMS_SHARED__c)= &quot;Duplicate Transaction Recorded&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Shipment Acknowledged&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Transfer Acknowledged&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Transfer Out Recorded&quot;,TEXT(Reason_BMS_SHARED__c)=&quot;Duplicate Return Recorded&quot;),-Duplicate_Sample_Transaction_BMS_SHARED__r.Inventory_Impact_Quantity_vod__c,IF(TEXT(Reason_BMS_SHARED__c)=&quot;Incorrect Sample/Lot Number Acknowledged&quot;,-Adjustment_Quantity_BMS_SHARED__c,Adjustment_Quantity_BMS_SHARED__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_Quantity_SECONDARY_BMS_SHARED__c</fullName>
        <formula>IF(TEXT(Reason_BMS_SHARED__c)= &quot;Incorrect Sample/Lot Number Acknowledged&quot;, Adjustment_Quantity_BMS_SHARED__c,IF(TEXT(Reason_BMS_SHARED__c)=&quot;Incorrect Sample/Lot Number Recorded&quot;,-Adjustment_Quantity_BMS_SHARED__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary: Adjusted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjustment_Quantity_BMS_SHARED__c</fullName>
        <label>Adjustment Quantity (In Units)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_Code_ID_BMS_SHARED__c</fullName>
        <label>BMS Code ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_EMEA_Sample_Adjustment_Country__c</fullName>
        <formula>TEXT($User.User_Source_Country_BMS_CORE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_EMEA_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_140, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_140)+3)+&quot;/&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMS_EMEA_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Territory_ID_BMS_SHARED__c</fullName>
        <label>BMS Territory ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPA_ID_BMS_SHARED__c</fullName>
        <formula>Address_BMS_SHARED__r.External_ID_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPA ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blank_Date_BMS_SHARED__c</fullName>
        <label>Blank Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City_BMS_SHARED__c</fullName>
        <formula>Address_BMS_SHARED__r.City_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_BMS_SHARED__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Correct_Inventory_Quantity_BMS_SHARED__c</fullName>
        <label>Correct Inventory Quantity (In Units)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Correct_Prescriber_BMS_SHARED__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Correct Prescriber</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Adjustment Requests</relationshipLabel>
        <relationshipName>Sample_Adjustment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_BMS_SHARED__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclaimer_BMS_CA__c</fullName>
        <description>Used for Canada Profiles only</description>
        <label>Disclaimer</label>
        <picklist>
            <picklistValues>
                <fullName>If your request is in response to the incorrect prescriber signing for samples and you cannot find the correct prescriber to link your sample call to then you must contact the Operational Effectiveness Coordinator at 1-800-267-1088 or via email.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representatives are required to report sample thefts/losses to Samples Management stakeholders within 24 hours. Notify the Operational Effectiveness Coordinator at 1-800-267-1088 or via email on the day of the theft or loss incident.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Effectiveness Coordinator verifies transferred products and quantities with both representatives involved in the transfer prior to approving adjustments.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Effectiveness Coordinator validates Return adjustments with Return vendor issued credit. Review of return adjustments may take 4-6 weeks.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Effectiveness Coordinator verifies correct Annual External Inventory quantities with the signed Sample Inventory Audit Form. Another audit may be required if quantities cannot be verified.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Effectiveness Coordinator verifies lost sample disbursement data with Help Desk ticket history.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Representatives are permitted to distribute samples, free of charge for patient treatment only to licensed physicians. It is prohibited for BMS employees to supply samples to physicians for off-label usage.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disclaimer_BMS_US__c</fullName>
        <label>Disclaimer</label>
        <picklist>
            <picklistValues>
                <fullName>If your request is in response to the incorrect prescriber signing for samples and you cannot find the correct prescriber to link your sample call to then you must contact Samples Management, 1-888-475-2328, option 3.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samples Management requires Prescriber verification on office letterhead or Rx pad for quantity adjustments. Documentation provided by the prescriber must be signed and specify disbursement date, samples (product/strength) and quantity received.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representatives are required to report sample thefts/losses to Samples Management within (1) one business day. Contact Samples Management at 1-888-475-2328, Opt. #3 or email samplesmanagement@bms.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samples Management verifies transferred products and quantities with both representatives involved in the transfer prior to approving adjustments.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samples Management validates Return adjustments with Return vendor issued credit. Review of return adjustments may take 4-6 weeks.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samples Management verifies correct Annual External Inventory quantities with the signed External Inventory Worksheet. Another audit may be required if quantities cannot be verified.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samples Management verifies lost sample disbursement data with Help Desk ticket history.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>District_ID_BMS_SHARED__c</fullName>
        <formula>LEFT( Territory_ID_BMS_SHARED__c , 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Quantity_BMS_SHARED__c</fullName>
        <formula>Duplicate_Sample_Transaction_BMS_SHARED__r.Inventory_Impact_Quantity_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Transaction: Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duplicate_Sample_Lot_BMS_SHARED__c</fullName>
        <formula>Duplicate_Sample_Transaction_BMS_SHARED__r.Lot_vod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Transaction: Sample Lot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Sample_Transaction_BMS_SHARED__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Sample Transaction</label>
        <referenceTo>Sample_Transaction_vod__c</referenceTo>
        <relationshipLabel>Sample Adjustment Requests (Duplicate Sample Transaction)</relationshipLabel>
        <relationshipName>Sample_Adjustment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Transaction_Date__c</fullName>
        <formula>IF(  Duplicate_Sample_Transaction_BMS_SHARED__r.RecordType.Name =&quot;Disbursement_vod&quot;,Duplicate_Sample_Transaction_BMS_SHARED__r.Signature_Date_vod__c, Duplicate_Sample_Transaction_BMS_SHARED__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Transaction: Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Date_BMS_SHARED__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Help_Desk_Ticket_Number_BMS_SHARED__c</fullName>
        <label>Help Desk Ticket Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Increase_Decrease_BMS_SHARED__c</fullName>
        <label>Increase/Decrease</label>
        <picklist>
            <controllingField>Reason_BMS_SHARED__c</controllingField>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Issue - No Adjustment Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Incorrect Lot/Decrease Correct Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease Incorrect Lot/Increase Correct Lot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_BMS_SHARED__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.Id</field>
                <operation>equals</operation>
                <valueField>Call2_vod__c.OwnerId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Sample Adjustment Requests</relationshipLabel>
        <relationshipName>Sample_Adjustment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Details_BMS_SHARED__c</fullName>
        <label>Inventory Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Record_BMS_SHARED__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Record</label>
        <referenceTo>Sample_Inventory_vod__c</referenceTo>
        <relationshipLabel>Sample Adjustment Requests</relationshipLabel>
        <relationshipName>Sample_Adjustment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_BMS_SHARED__c</fullName>
        <formula>Address_BMS_SHARED__r.License_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date_BMS_SHARED__c</fullName>
        <formula>Address_BMS_SHARED__r.License_Expiration_Date_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Valid_to_Sample_BMS_SHARED__c</fullName>
        <formula>Address_BMS_SHARED__r.License_Valid_To_Sample_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Valid to Sample</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_BMS_SHARED__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact Samples Management at 1-888-475-2328, Opt #3 if the sample Lot # requiring an adjustment is not available for selection.</inlineHelpText>
        <label>Lot #</label>
        <referenceTo>Sample_Lot_vod__c</referenceTo>
        <relationshipLabel>Sample Adjustment Requests</relationshipLabel>
        <relationshipName>Sample_Adjustment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notify_Recipient_TBM_BMS_SHARED__c</fullName>
        <label>Was TBM who received samples notified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Number_BMS_SHARED__c</fullName>
        <label>Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Report_BMS_SHARED__c</fullName>
        <label>Police Report #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescriber_Information_BMS_SHARED__c</fullName>
        <inlineHelpText>List prescriber names and addresses for disbursements lost due to hardware/software failure</inlineHelpText>
        <label>Additional Prescriber Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_BMS_SHARED__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect Quantity Recorded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Prescriber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Prescriber Profile &amp; Duplicate Disbursement Recorded on Correct Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursement Not Recorded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Sample/Lot Number Recorded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Transaction Recorded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concealed Short-Ship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Quantity Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Shipment Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Received - Not Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Received - Unable to Acknowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Received - Unable to Acknowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Sample/Lot Number Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Transfer Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Transfer Out Recorded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Return Recorded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Call Date Recorded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware/Software Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly Rep Inventory Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Inventory Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Auditor Inventory Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_Documentation_BMS_SHARED__c</fullName>
        <label>Required Documentation:</label>
        <picklist>
            <picklistValues>
                <fullName>Attach signed External Inventory Worksheet, if reporting an Annual Auditor Inventory Error.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attach Prescriber Verification of samples received for adjustments due to recording duplicate disbursement on correct prescriber profile.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attach copy of Return Authorization Form and shipping receipt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attach Prescriber Verification of samples received for adjustments due to recording incorrect quantity on original transaction.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attach Police Report to Initial Report of sample theft.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email from representative who transferred samples confirming correct quantities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email from receiving representative confirming correct quantity received.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed External Inventory Worksheet with correct inventory count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescriber verification for sample quantity errors if duplicate disbursement recorded on correct profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return Authorization Form and Shipping Receipt with tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursement quantity errors require Prescriber verification of samples received (on Rx pad or letterhead)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police Report for initial theft report</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Return_Authorization_Number_BMS_SHARED__c</fullName>
        <label>Return Authorization Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAR_Form_Document_ID_BMS_SHARED__c</fullName>
        <label>STAR Form Document ID # (if applicable)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Force_ID_BMS_SHARED__c</fullName>
        <label>Sales Force ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Force_Name_BMS_SHARED__c</fullName>
        <label>Sales Force Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Disbursement_Form_BMS_CA__c</fullName>
        <description>Used by Canada in place of STAR document field.</description>
        <label>Sample Disbursement Form</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Transaction_BMS_SHARED__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sample Transaction</label>
        <referenceTo>Sample_Transaction_vod__c</referenceTo>
        <relationshipLabel>Sample Adjustment Requests</relationshipLabel>
        <relationshipName>Sample_Adjustment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_Transaction_Date_BMS_Shared__c</fullName>
        <formula>IF( Sample_Transaction_BMS_SHARED__r.RecordType.Name=&quot;Disbursement_vod&quot;,Sample_Transaction_BMS_SHARED__r.Signature_Date_vod__c, Sample_Transaction_BMS_SHARED__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Transaction: Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sample_Transaction_Lot_BMS_SHARED__c</fullName>
        <formula>Sample_Transaction_BMS_SHARED__r.Lot_vod__r.Name</formula>
        <label>Sample Transaction: Lot #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Transaction_Quantity_BMS_SHARED__c</fullName>
        <formula>Sample_Transaction_BMS_SHARED__r.Inventory_Impact_Quantity_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Transaction: Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Carrier_BMS_SHARED__c</fullName>
        <label>Shipping Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_BMS_SHARED__c</fullName>
        <formula>TEXT(Address_BMS_SHARED__r.State_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_BMS_SHARED__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_Business_Code_BMS_SHARED__c</fullName>
        <label>Territory Business Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Function_Code_BMS_SHARED__c</fullName>
        <label>Territory Function Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_ID_BMS_SHARED__c</fullName>
        <formula>RIGHT( Territory_Intelligent_ID_BMS_SHARED__c , 8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Intelligent_ID_BMS_SHARED__c</fullName>
        <label>Territory Intelligent ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Region_Code_BMS_SHARED__c</fullName>
        <label>Territory Region Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Area_Code_BMS_SHARED__c</fullName>
        <label>Territory Sales Area Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date_BMS_SHARED__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tracking_Number_BMS_SHARED__c</fullName>
        <label>Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfered_To_BMS_SHARED__c</fullName>
        <formula>Sample_Transaction_BMS_SHARED__r.Transfer_To_vod__r.LastName&amp;&quot;,&quot;&amp; Sample_Transaction_BMS_SHARED__r.Transfer_To_vod__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfered To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferring_TBM_BMS_SHARED__c</fullName>
        <label>Transferring TBM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferring_TBM_Notified_BMS_SHARED__c</fullName>
        <inlineHelpText>Was TBM who transferred samples notified of error?</inlineHelpText>
        <label>Was transferring TBM notified of error?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code_BMS_SHARED__c</fullName>
        <formula>Address_BMS_SHARED__r.Zip_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Sample Adjustment Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Inventory_Record_BMS_SHARED__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Reason_BMS_SHARED__c</columns>
        <columns>Interaction_BMS_SHARED__c</columns>
        <columns>Lot_BMS_SHARED__c</columns>
        <columns>Status_BMS_SHARED__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_Sample_Admin_Italy_Sample_Adjustment_Request_BMS_SHARED</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - Sample Admin Italy</label>
        <queue>BMS_EMEA_Sample_Admin_Italy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_Sample_Admin_Turkey_Sample_Adjustment_Request_BMS_SHARED</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - Sample Admin Turkey</label>
        <queue>BMS_EMEA_Sample_Admin_Turkey</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_Sample_Admin_UK_and_Ireland_Sample_Adjustment_Request_BMS_SHARED</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - Sample Admin UK and Ireland</label>
        <queue>BMS_EMEA_Sample_Admin_UK_and_Ireland</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SAR-{00000}</displayFormat>
        <label>Sample Adjustment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Adjustment Requests</pluralLabel>
    <recordTypes>
        <fullName>Hardware_Software_Failure</fullName>
        <active>true</active>
        <description>Request adjustment for lost disbursement data due to Hardware/Software failure</description>
        <label>Hardware/Software Failure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incorrect_Prescriber_Profile_BMS_Core</fullName>
        <active>true</active>
        <description>Report dibsursments recorded on incorrect prescriber profile and request adjustment when prescriber signs on both incorrect and correct profiles</description>
        <label>Incorrect Prescriber Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory</fullName>
        <active>true</active>
        <description>Report Inventory entry error</description>
        <label>Inventory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Return</fullName>
        <active>true</active>
        <description>Request adjustment(s) for error on Return transaction</description>
        <label>Return</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sample_Disbursement</fullName>
        <active>true</active>
        <description>Request adjustment(s) for error on Sample Disbursement</description>
        <label>Sample Disbursement</label>
    </recordTypes>
</CustomObject>